# smart-pointer-example

./: .gitignore  CMakeLists.txt
include/: hcp.h  hospital.h  illness.h  patient.h  tasks.h
src/: hcp.cpp  hospital.cpp  illness.cpp  main.cpp  patient.cpp
